--- a/app/src/main/res/layout/activity_simon_classic.xml
+++ b/app/src/main/res/layout/activity_simon_classic.xml
@@ -4,31 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".simon_classic"
     android:background="@android:color/darker_gray">
 
     <TextView
-        android:id="@+id/tv_MainTitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
-        android:text="Super Simon"
+        android:gravity="center"
+        android:text="Simon Classic"
         android:textColor="@android:color/black"
         android:textSize="55sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="409dp"
         android:layout_height="653dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="77dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_MainTitle"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        tools:layout_editor_absoluteX="1dp">
         <include
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -39,6 +37,5 @@
             android:layout_marginBottom="60sp"
             />
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
