--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -4,4 +4,5 @@
         <corners android:radius="10dip"/>
         <stroke android:color="#069e13" android:width="5dip"/>
         <solid android:color="#069e13"/>
+    <size android:height="120dp" android:width="120dp"/>
     </shape>
