--- a/app/src/main/res/drawable/button_green_down.xml
+++ b/app/src/main/res/drawable/button_green_down.xml
@@ -4,4 +4,5 @@
         <corners android:radius="10dip"/>
         <stroke android:color="#17cf26" android:width="5dip"/>
         <solid android:color="#17cf26"/>
+    <size android:height="120dp" android:width="120dp"/>
     </shape>
