--- a/app/src/main/res/drawable/button_red.xml
+++ b/app/src/main/res/drawable/button_red.xml
@@ -4,4 +4,5 @@
         <corners android:radius="10dip"/>
         <stroke android:color="#c70c0c" android:width="5dip"/>
         <solid android:color="#c70c0c"/>
+    <size android:height="120dp" android:width="120dp"/>
     </shape>
