--- a/app/src/main/res/drawable/button_yellow.xml
+++ b/app/src/main/res/drawable/button_yellow.xml
@@ -4,4 +4,5 @@
         <corners android:radius="10dip"/>
         <stroke android:color="#c3c90c" android:width="5dip"/>
         <solid android:color="#c3c90c"/>
+    <size android:height="120dp" android:width="120dp"/>
     </shape>
