--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+
+  <!--  <LinearLayout
+        android:id="@+id/ll_line1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ll_line2"
-        android:id="@+id/ll_line1"
-        android:layout_marginTop="150dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/btn_blue"
@@ -36,14 +34,16 @@
             android:gravity="center"
             android:text="Simon Variant 2"
             android:textColor="@android:color/white"
-            android:textSize="20sp"></Button> </LinearLayout>
+            android:textSize="20sp"></Button>
+    </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/ll_line2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ll_line2"
-        app:layout_constraintTop_toBottomOf="@id/ll_line1"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_line1">
 
         <Button
             android:id="@+id/btn_red"
@@ -56,6 +56,7 @@
             android:text="Simon Variant 3"
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
+
         <Button
             android:id="@+id/btn_yellow"
             android:layout_width="0dp"
@@ -67,5 +68,7 @@
             android:text="Simon Variant 4"
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
-    </LinearLayout>
+    </LinearLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
