--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,71 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_line1"
+    <include
+        layout="@layout/button_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/ll_line2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_MainTitle">
-
-        <Button
-            android:id="@+id/btn_blue"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_blue"
-            android:gravity="center"
-            android:text="Simon Classic"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-
-        <Button
-            android:id="@+id/btn_green"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_green"
-            android:gravity="center"
-            android:text="Simon Variant 2"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_line2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_line1">
-
-        <Button
-            android:id="@+id/btn_red"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_red"
-            android:gravity="center"
-            android:text="Simon Variant 3"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-
-        <Button
-            android:id="@+id/btn_yellow"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_yellow"
-            android:gravity="center"
-            android:text="Simon Variant 4"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-    </LinearLayout>
-
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
