--- a/app/src/main/res/layout/activity_simon_classic.xml
+++ b/app/src/main/res/layout/activity_simon_classic.xml
@@ -35,7 +35,7 @@
             android:background="@drawable/button_blue"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
+            android:textSize="55sp"></Button>
 
         <Button
             android:id="@+id/btn_green"
@@ -80,5 +80,27 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_line2" />
+
+    <TextView
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        tools:layout_editor_absoluteX="358dp"
+        tools:layout_editor_absoluteY="28dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="55sp"
+        android:layout_marginRight="10sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
