--- a/app/src/main/res/layout/activity_simon_classic.xml
+++ b/app/src/main/res/layout/activity_simon_classic.xml
@@ -18,68 +18,15 @@
         android:textSize="55sp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_line1"
+    <include
+        android:id="@+id/include2"
+        layout="@layout/button_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/ll_line2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-        <Button
-            android:id="@+id/btn_blue"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_blue"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="55sp"></Button>
-
-        <Button
-            android:id="@+id/btn_green"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_green"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_line2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_line1">
-
-        <Button
-            android:id="@+id/btn_red"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_red"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-
-        <Button
-            android:id="@+id/btn_yellow"
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_yellow"
-            android:gravity="center"
-            android:text="Simon Variant 4"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btn_start"
@@ -89,7 +36,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_line2" />
+        app:layout_constraintTop_toBottomOf="@+id/include2"
+        app:layout_constraintVertical_bias="0.594" />
 
     <TextView
         android:id="@+id/tv_score"
