--- a/app/src/main/res/layout/acitivy_simon_rewind.xml
+++ b/app/src/main/res/layout/acitivy_simon_rewind.xml
@@ -36,8 +36,10 @@
             android:layout_weight="1"
             android:background="@drawable/button_green"
             android:gravity="center"
+            android:tag="0"
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
+
         <Button
             android:id="@+id/btn_red1"
             android:layout_width="0dp"
@@ -46,6 +48,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_red"
             android:gravity="center"
+            android:tag="1"
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
 
@@ -59,7 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_line3">
 
-        <Button
+        <ImageView
             android:id="@+id/btn_yellow1"
             android:layout_width="0dp"
             android:layout_height="180dp"
@@ -67,9 +70,9 @@
             android:layout_weight="1"
             android:background="@drawable/button_yellow"
             android:gravity="center"
+            android:tag="3"
             android:textColor="@android:color/white"
-            android:textSize="20sp"></Button>
-
+            android:textSize="20sp"></ImageView>
         <Button
             android:id="@+id/btn_blue1"
             android:layout_width="0dp"
@@ -78,19 +81,36 @@
             android:layout_weight="1"
             android:background="@drawable/button_blue"
             android:gravity="center"
+            android:tag="2"
             android:textColor="@android:color/white"
             android:textSize="20sp"></Button>
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/startButton"
+    <TextView
+        android:id="@+id/playerStatusTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Simons Turn"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
+
+    <Button
+        android:id="@+id/btnStart1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
         android:text="Start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
+        app:layout_constraintTop_toBottomOf="@+id/playerStatusTextView"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
