--- a/app/src/main/res/layout/acitivy_simon_rewind.xml
+++ b/app/src/main/res/layout/acitivy_simon_rewind.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".simon_classic">
+    tools:context=".simon_rewind">
 
     <TextView
         android:id="@+id/textView"
@@ -34,12 +34,12 @@
             android:layout_height="180dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/button_green"
             android:clickable="true"
             android:gravity="center"
-            android:tag="0"
+            android:tag="1"
             android:textColor="@android:color/white"
-            android:textSize="20sp"></ImageView>
+            android:textSize="20sp"
+            app:srcCompat="@drawable/button_green"></ImageView>
 
         <ImageView
             android:id="@+id/btn_red1"
@@ -49,7 +49,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_red"
             android:clickable="true"
-            android:tag="1"
+            android:tag="2"
 
             ></ImageView>
 
@@ -72,7 +72,7 @@
             android:background="@drawable/button_yellow"
             android:clickable="true"
             android:gravity="center"
-            android:tag="3"
+            android:tag="4"
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
 
@@ -85,7 +85,7 @@
             android:background="@drawable/button_blue"
             android:clickable="true"
             android:gravity="center"
-            android:tag="2"
+            android:tag="3"
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
     </LinearLayout>
@@ -103,18 +103,5 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
-
-    <Button
-        android:id="@+id/btnStart1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="Start"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerStatusTextView"
-        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
