--- a/app/src/main/res/layout/activity_simon_surprise.xml
+++ b/app/src/main/res/layout/activity_simon_surprise.xml
@@ -77,7 +77,7 @@
             android:textSize="20sp"></ImageView>
 
         <ImageView
-            android:id="@+id/btn_four"
+            android:id="@+id/btn_three"
             android:layout_width="0dp"
             android:layout_height="180dp"
             android:layout_margin="10dp"
@@ -85,7 +85,7 @@
             android:background="@drawable/button_black"
             android:clickable="true"
             android:gravity="center"
-            android:tag="4"
+            android:tag="3"
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
     </LinearLayout>
