--- a/app/src/main/res/layout/acitivy_simon_rewind.xml
+++ b/app/src/main/res/layout/acitivy_simon_rewind.xml
@@ -104,4 +104,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        tools:layout_editor_absoluteX="338dp"
+        tools:layout_editor_absoluteY="33dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="10dp"
+        android:textSize="55sp"/>
+
+    <Button
+        android:id="@+id/buttonHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Return to home"
+        app:layout_constraintTop_toBottomOf="@id/ll_line4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
+        ></Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
