--- a/app/src/main/res/layout/activity_simon_classic.xml
+++ b/app/src/main/res/layout/activity_simon_classic.xml
@@ -89,7 +89,16 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
     </LinearLayout>
-
+<Button
+    android:id="@+id/buttonHome"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Return to home"
+    app:layout_constraintTop_toBottomOf="@id/ll_line4"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:visibility="invisible"
+    ></Button>
 
     <TextView
         android:id="@+id/playerStatusTextView"
@@ -103,5 +112,17 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
+
+    <TextView
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="55sp"
+        tools:layout_editor_absoluteX="344dp"
+        tools:layout_editor_absoluteY="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
