finished adding score and restart buttons

--- a/app/src/main/res/layout/activity_simon_extreme.xml
+++ b/app/src/main/res/layout/activity_simon_extreme.xml
@@ -89,7 +89,17 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
     </LinearLayout>
-
+<Button
+    android:id="@+id/btn_home"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Restart"
+    android:textSize="55sp"
+    app:layout_constraintTop_toBottomOf="@id/ll_line3"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:visibility="invisible"
+    />
     <LinearLayout
         android:id="@+id/ll_line7"
         android:layout_width="match_parent"
@@ -124,6 +134,16 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"></ImageView>
 
-    </LinearLayout>
 
+    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="55sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="10dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
