--- a/app/src/main/res/layout/activity_simon_surprise.xml
+++ b/app/src/main/res/layout/activity_simon_surprise.xml
@@ -104,4 +104,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_line4" />
 
+    <TextView
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        tools:layout_editor_absoluteX="343dp"
+        tools:layout_editor_absoluteY="26dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="55sp"/>
+
+    <Button
+        android:id="@+id/buttonHomeSS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restart"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="519dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_line4"
+        android:layout_marginTop="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="invisible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
